# renovate-rules_oci-example

./: BUILD.bazel  WORKSPACE
